add all the folder and file of the app

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <ul class="contact__info">
             <li>Jonathan</li>
             <li>
-                <a href="https://github.com/KAYEMBAJONATHAN">mybio</a>
+                <a href="https://github.com/KAYEMBAJONATHAN">Thank you</a>
             </li>
             <li>Pretoria, South Africa</li>
         </ul>
